forgot to commit ChangeLog changes
git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14416 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-08-13  Sven Neumann  <sven@gimp.org>
+
+	* plug-ins/common/edge.c (edge_dialog): use a combo box instead of
+	too many radio buttons.
+
 2004-08-12  Michael Natterer  <mitch@gimp.org>
 
 	* app/widgets/gimpmenufactory.c (gimp_menu_factory_manager_new):
