* plug-ins/common/edge.c: update the preview when the user choose a   different algorithm from the combo box. This was one of the main   reasons to have a preview here, after all.
git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14417 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2004-08-13  DindinX  <david@dindinx.org>
+
+	* plug-ins/common/edge.c: update the preview when the user choose a
+	different algorithm from the combo box. This was one of the main
+	reasons to have a preview here, after all.
+
 2004-08-13  Sven Neumann  <sven@gimp.org>
 
 	* plug-ins/common/edge.c (edge_dialog): use a combo box instead of
