Unified po headers for Finnish Team
git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14418 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/po-libgimp/fi.po
+++ b/po-libgimp/fi.po
@@ -10,7 +10,7 @@ msgstr ""
 "POT-Creation-Date: 2004-08-06 02:06+0200\n"
 "PO-Revision-Date: 2004-03-18 02:16+0200\n"
 "Last-Translator: Mikko Paananen <mikko at ipi.fi>\n"
-"Language-Team: Finnish <fi@li.org>\n"
+"Language-Team: Finnish <gnome-fi-laatu@lists.sourceforge.net>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
