--- a/po-script-fu/ChangeLog
+++ b/po-script-fu/ChangeLog
@@ -1,3 +1,7 @@
+2004-08-13  Tommi Vainikainen  <thv@iki.fi>
+
+	* fi.po: Unified some fields in po headers for Finnish team.
+
 2004-08-09  Danilo Šegan  <dsegan@gmx.net>
 
 	* sr.po, sr@Latn.po: Merged from gimp-2-0 branch.
