--- a/po-plug-ins/fi.po
+++ b/po-plug-ins/fi.po
@@ -11,7 +11,7 @@ msgstr ""
 "POT-Creation-Date: 2004-08-06 03:34+0200\n"
 "PO-Revision-Date: 2004-03-19 02:25+0200\n"
 "Last-Translator: Mikko Paananen <mikko at ipi.fi>\n"
-"Language-Team: Finnish <fi@li.org>\n"
+"Language-Team: Finnish <gnome-fi-laatu@lists.sourceforge.net>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -11091,7 +11091,7 @@ msgstr ""
 msgid "Drawing Maze..."
 msgstr ""
 
-#. $Id: fi.po,v 1.78 2004/08/06 01:45:22 neo Exp $
+#. $Id: fi.po,v 1.79 2004/08/13 19:46:23 tvainika Exp $
 #: plug-ins/maze/maze.h:2
 msgid "Maze"
 msgstr ""
