--- a/po-script-fu/fi.po
+++ b/po-script-fu/fi.po
@@ -9,7 +9,7 @@ msgstr ""
 "POT-Creation-Date: 2004-08-06 02:08+0200\n"
 "PO-Revision-Date: 2004-03-19 01:51+0200\n"
 "Last-Translator: Ville Hautamäki <villeh@cs.joensuu.fi>\n"
-"Language-Team: Finnish <fi@li.org>\n"
+"Language-Team: Finnish <gnome-fi-laatu@lists.sourceforge.net>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8-bit\n"
