--- a/po/fi.po
+++ b/po/fi.po
@@ -17,7 +17,7 @@ msgstr ""
 "POT-Creation-Date: 2004-08-06 02:03+0200\n"
 "PO-Revision-Date: 2004-03-22 18:36+0200\n"
 "Last-Translator: Mikko Paananen\n"
-"Language-Team:\n"
+"Language-Team: Finnish <gnome-fi-laatu@lists.sourceforge.net>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
