2004-08-14  Sven Neumann  <sven@gimp.org>
	* plug-ins/help/help.[ch]: moved some defines to the header file.

	* plug-ins/help/domain.c: trivial change to remove the libgimpbase
	dependency.

	* plug-ins/help/Makefile.am
	* plug-ins/help/gimp-help-lookup.c: added a very simple
	command-line tool that allows to lookup a help-id.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14419 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,14 @@
+2004-08-14  Sven Neumann  <sven@gimp.org>
+
+	* plug-ins/help/help.[ch]: moved some defines to the header file.
+
+	* plug-ins/help/domain.c: trivial change to remove the libgimpbase
+	dependency.
+
+	* plug-ins/help/Makefile.am
+	* plug-ins/help/gimp-help-lookup.c: added a very simple
+	command-line tool that allows to lookup a help-id.
+
 2004-08-13  DindinX  <david@dindinx.org>
 
 	* plug-ins/common/edge.c: update the preview when the user choose a
