2004-08-14  Sven Neumann  <sven@gimp.org>
	* plug-ins/help/locales.c (locales_parse): don't mess up the order
	of languages.

	* plug-ins/help/gimp-help-lookup.c: parse command-line options,
	added --help output.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14420 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,13 @@
 2004-08-14  Sven Neumann  <sven@gimp.org>
 
+	* plug-ins/help/locales.c (locales_parse): don't mess up the order
+	of languages.
+
+	* plug-ins/help/gimp-help-lookup.c: parse command-line options,
+	added --help output.
+
+2004-08-14  Sven Neumann  <sven@gimp.org>
+
 	* plug-ins/help/help.[ch]: moved some defines to the header file.
 
 	* plug-ins/help/domain.c: trivial change to remove the libgimpbase
