2004-08-14  Sven Neumann  <sven@gimp.org>
	* plug-ins/help/Makefile.am: no need to link gimp-help-lookup with
	any GIMP libraries.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14423 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,8 @@
 2004-08-14  Sven Neumann  <sven@gimp.org>
 
+	* plug-ins/help/Makefile.am: no need to link gimp-help-lookup with
+	any GIMP libraries.
+
 	* plug-ins/help/domain.[ch]: allow to specify the location of the
 	index files independently from the base URL.
 
