2004-08-14  Manish Singh  <yosh@gimp.org>
        * libgimpbase/gimpprotocol.c (_gp_params_read): make sure array
        length values are not negative, to prevent bad calls to g_new.
        Addresses bug #150154.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14424 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2004-08-14  Manish Singh  <yosh@gimp.org>
+
+	* libgimpbase/gimpprotocol.c (_gp_params_read): make sure array
+	length values are not negative, to prevent bad calls to g_new.
+	Addresses bug #150154.
+
 2004-08-14  Sven Neumann  <sven@gimp.org>
 
 	* plug-ins/help/Makefile.am: no need to link gimp-help-lookup with
