* modules/colorsel_triangle.c * modules/colorsel_water.c: Replaced the GtkPreviews by   GimpPreviewAreas.
git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14426 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2004-08-15  DindinX  <david@dindinx.org>
+
+	* modules/colorsel_triangle.c
+	* modules/colorsel_water.c: Replaced the GtkPreviews by
+	GimpPreviewAreas.
+
 2004-08-14  Manish Singh  <yosh@gimp.org>
 
 	* libgimpbase/gimpprotocol.c (_gp_params_read): make sure array
