--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2004-08-15  Sven Neumann  <sven@gimp.org>
+
+	* modules/colorsel_triangle.c: minor cleanups.
+
+	* modules/colorsel_water.c: GimpPreviewArea seems like overkill
+	here, use a GtkDrawingArea instead.
+
 2004-08-15  DindinX  <david@dindinx.org>
 
 	* modules/colorsel_triangle.c
