--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-08-16  DindinX  <david@dindinx.org>
+
+	* plug-ins/common/iwarp.c: fixed a typo preventing the preview to be
+	redrawn correctly in some case. Reported by AndyFitz.
+
 2004-08-15  Sven Neumann  <sven@gimp.org>
 
 	* modules/colorsel_triangle.c: minor cleanups.
