--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-08-16  Sven Neumann  <sven@gimp.org>
+
+	* app/widgets/gimpcolorframe.c (gimp_color_frame_update): fixed
+	labels in CMYK mode. Fixes bug #150213.
+
 2004-08-16  DindinX  <david@dindinx.org>
 
 	* plug-ins/common/iwarp.c: fixed a typo preventing the preview to be
