2004-08-17  Sven Neumann  <sven@gimp.org>
	* app/plug-in/plug-in-progress.c
	* app/plug-in/plug-in-run.c
	* app/plug-in/plug-in.c: don't keep a strong reference to the
	GimpProgress object, instead use a weak reference and deal with
	the progress being destroyed while the plug-in is running.
	Fixes bug #150194.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14430 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2004-08-17  Sven Neumann  <sven@gimp.org>
+
+	* app/plug-in/plug-in-progress.c
+	* app/plug-in/plug-in-run.c
+	* app/plug-in/plug-in.c: don't keep a strong reference to the
+	GimpProgress object, instead use a weak reference and deal with
+	the progress being destroyed while the plug-in is running.
+	Fixes bug #150194.
+
 2004-08-16  Sven Neumann  <sven@gimp.org>
 
 	* app/widgets/gimpcolorframe.c (gimp_color_frame_update): fixed
