2004-08-17  Sven Neumann  <sven@gimp.org>
	* modules/colorsel_cmyk.c: minor cleanups.

	* modules/colorsel_water.c: let the widget take the available
	space, don't set a minimum size.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14431 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,12 @@
 2004-08-17  Sven Neumann  <sven@gimp.org>
 
+	* modules/colorsel_cmyk.c: minor cleanups.
+
+	* modules/colorsel_water.c: let the widget take the available
+	space, don't set a minimum size.
+
+2004-08-17  Sven Neumann  <sven@gimp.org>
+
 	* app/plug-in/plug-in-progress.c
 	* app/plug-in/plug-in-run.c
 	* app/plug-in/plug-in.c: don't keep a strong reference to the
