--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-08-17  Bill Skaggs  <weskaggs@primate.ucdavis.edu>
+
+	* app/widgets/gimpdock.c
+	* app/widgets/gimpdockable.c: add help-ids.
+
 2004-08-17  Sven Neumann  <sven@gimp.org>
 
 	* app/plug-in/plug-in-progress.c (plug_in_progress_start): reset
