2004-08-17  Simon Budig  <simon@gimp.org>
	* modules/colorsel_triangle.c: Made the triangle colorselector
	resizeable. Removed minimum size request (would probably need some
	testing for *very* small sizes though).


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14434 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2004-08-17  Simon Budig  <simon@gimp.org>
+
+	* modules/colorsel_triangle.c: Made the triangle colorselector
+	resizeable. Removed minimum size request (would probably need some
+	testing for *very* small sizes though).
+
 2004-08-17  Bill Skaggs  <weskaggs@primate.ucdavis.edu>
 
 	* app/widgets/gimpdock.c
