--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2004-08-18  Sven Neumann  <sven@gimp.org>
+
+	* app/widgets/gimphelp-ids.h: define GIMP_HELP_DOCK_SEPARATOR.
+
+	* app/widgets/gimpdock.c
+	* app/widgets/gimpdockable.c: help-ids are never used directly,
+	use the defines from app/widgets/gimphelp-ids.h instead.
+
 2004-08-17  Simon Budig  <simon@gimp.org>
 
 	* modules/colorsel_triangle.c: Made the triangle colorselector
