2004-08-18  Sven Neumann  <sven@gimp.org>
	* modules/colorsel_triangle.c: fixed crashes that occured with
	small sizes, some code cleanups and a simple optimization.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14437 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2004-08-18  Sven Neumann  <sven@gimp.org>
 
+	* modules/colorsel_triangle.c: fixed crashes that occured with
+	small sizes, some code cleanups and a simple optimization.
+
+2004-08-18  Sven Neumann  <sven@gimp.org>
+
 	* app/widgets/gimphelp-ids.h: define GIMP_HELP_DOCK_SEPARATOR.
 
 	* app/widgets/gimpdock.c
