2004-08-18  Sven Neumann  <sven@gimp.org>
	* app/gui/color-notebook.c: no need to set a size_request here.

	* libgimpwidgets/gimpcolorselection.c: HIG-ified spacings.

	* libgimpwidgets/gimpcolorscales.c
	* modules/colorsel_cmyk.c: don't set a minimum width on the color
	scales. Improves behaviour for narrow color dockables.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14438 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,15 @@
 2004-08-18  Sven Neumann  <sven@gimp.org>
 
+	* app/gui/color-notebook.c: no need to set a size_request here.
+
+	* libgimpwidgets/gimpcolorselection.c: HIG-ified spacings.
+
+	* libgimpwidgets/gimpcolorscales.c
+	* modules/colorsel_cmyk.c: don't set a minimum width on the color
+	scales. Improves behaviour for narrow color dockables.
+
+2004-08-18  Sven Neumann  <sven@gimp.org>
+
 	* modules/colorsel_triangle.c: fixed crashes that occured with
 	small sizes, some code cleanups and a simple optimization.
 
