--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2004-08-18  Manish Singh  <yosh@gimp.org>
+
+	* app/widgets/gimpcellrendereraccel.c
+	* app/widgets/gimphistogrambox.c
+	* plug-ins/gfig/gfig-dialog.c: Get rid of some unnecessary casts.
+
 2004-08-18  Sven Neumann  <sven@gimp.org>
 
 	* app/gui/color-notebook.c: no need to set a size_request here.
