--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2004-08-19  Michael Schumacher <schumaml@cvs.gnome.org>
+
+	* plug-ins/common/guillotine.c: modified the coordinate insertion
+	into the file name to leave the file extension intact, changed the
+	format of the coordinates. Fixes bug #101901.
+
 2004-08-18  Manish Singh  <yosh@gimp.org>
 
 	* app/widgets/gimpcellrendereraccel.c
