--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+2004-08-21  Sven Neumann  <sven@gimp.org>
+
+	* app/actions/layers-actions.[ch]
+	* app/actions/layers-commands.[ch]
+	* app/widgets/gimplayertreeview.c: added actions to handle layer
+	masks as suggested in bug #150446.
+
+	* menus/layers-menu.xml: added menu entries for new actions,
+	commented out raise/lower menu entries.
+
 2004-08-20  Sven Neumann  <sven@gimp.org>
 
 	* modules/controller_linux_input.c: declare local function as static.
