--- a/NEWS
+++ b/NEWS
@@ -201,7 +201,7 @@ Contributors:
 
    Michael Natterer, Sven Neumann, Manish Singh, Philip Lafleur,
    William Skaggs, Geert Jordaens, Yeti, Dave Neary, Jakub Steiner,
-   David Gowers, , Henrik Brix Andersen, Simon Budig, Pedro Gimeno,
+   David Gowers, Henrik Brix Andersen, Simon Budig, Pedro Gimeno,
    lots of translators and the contributors that I accidentally missed...
 
 
