--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,13 @@
 2004-08-21  Sven Neumann  <sven@gimp.org>
 
+	* app/vectors/gimpbezierstroke.c (gimp_bezier_stroke_arcto): fixed
+	a bug I introduced with my last commit.
+
+	* app/vectors/gimpvectors-import.c: added support for the basic
+	SVG shape "rect". Fixed handling of SVG lengths in basic shapes.
+
+2004-08-21  Sven Neumann  <sven@gimp.org>
+
 	* app/vectors/gimpbezierstroke.[ch]: added new function
 	gimp_bezier_stroke_new_ellipse() that provides a simple API to
 	create a bezier stroke that represents an ellipse.
