--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,12 @@
 2004-08-21  Sven Neumann  <sven@gimp.org>
 
+	* app/vectors/gimpvectors-import.c (parse_svg_transform): support
+	optional center coordinates for the "rotate" transformations.
+	(parse_svg_transform): apply transformations in reverse order. The
+	SVG spec is rather confusing here.
+
+2004-08-21  Sven Neumann  <sven@gimp.org>
+
 	* app/vectors/gimpbezierstroke.c (gimp_bezier_stroke_arcto): fixed
 	a bug I introduced with my last commit.
 
