* app/tools/tools-utils.c: fixed a typo that broke the build.
git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14462 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-08-23  DindinX  <david@dindinx.org>
+
+	* app/tools/tools-utils.c: fixed a typo that broke the build.
+
 2004-08-22  Sven Neumann  <sven@gimp.org>
 
 	* app/tools/Makefile.am
