--- a/tips/ChangeLog
+++ b/tips/ChangeLog
@@ -1,3 +1,7 @@
+2004-08-24  Sven Neumann  <sven@gimp.org>
+
+	* Makefile.am (tips_POFILES): added pa.po (Punjabi).
+
 2004-07-15  Dmitry G. Mastrukov  <dmitry@taurussoft.org>
 
 	* ru.po: Updated Russian translation
