2004-08-24  Sven Neumann  <sven@gimp.org>
	* app/widgets/gimpmessagebox.[ch]: added API to change the labels.
	Modeled after the proposed new API for GtkMessageDialog.

	* app/widgets/gimpwidgets-utils.c: changed accordingly.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14472 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2004-08-24  Sven Neumann  <sven@gimp.org>
+
+	* app/widgets/gimpmessagebox.[ch]: added API to change the labels.
+	Modeled after the proposed new API for GtkMessageDialog.
+
+	* app/widgets/gimpwidgets-utils.c: changed accordingly.
+
 2004-08-24  DindinX  <david@dindinx.org>
 
 	* app/widgets/gimppreview.c
