--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-08-24  Roman Joost	<romanofski@gimp.org>
+
+	* de.po: updated and removed fuzzy strings
+
 2004-08-13  Tommi Vainikainen  <thv@iki.fi>
 
 	* fi.po: Unified some fields in po headers for Finnish team.
