--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2004-08-25  Michael Natterer  <mitch@gimp.org>
+
+	* app/display/gimpdisplayshell-title.c
+	(gimp_display_shell_format_title): print bad '%' sequences
+	literally instead of warning (g_warning() is for programming
+	errors only and must never be triggered by bad or intermediate
+	user input). Fixes bug #150676
+
 2004-08-24  Sven Neumann  <sven@gimp.org>
 
 	* app/widgets/gimpmessagebox.c: put the icon to the right for RTL
