Bill Skaggs  <weskaggs@primate.ucdavis.edu>
	* devel-docs/ggr.txt: added new file decribing the ggr
	(Gimp gradient) file format.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14478 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-08-25  Bill Skaggs  <weskaggs@primate.ucdavis.edu>
+
+	* devel-docs/ggr.txt: added new file decribing the ggr 
+	(Gimp gradient) file format.
+	
 2004-08-25  DindinX  <david@dindinx.org>
 
 	* app/display/gimpnavigationview.c
