Bill Skaggs  <weskaggs@primate.ucdavis.edu>
	* devel-docs/Makefile.am: added ggr.txt to list.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14479 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2004-08-25  Bill Skaggs  <weskaggs@primate.ucdavis.edu>
 
+	* devel-docs/Makefile.am: added ggr.txt to list.
+	
+2004-08-25  Bill Skaggs  <weskaggs@primate.ucdavis.edu>
+
 	* devel-docs/ggr.txt: added new file decribing the ggr 
 	(Gimp gradient) file format.
 	
