* app/display/gimpnavigationeditor.[ch]: eradicate some more previews   in favor of views.
git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14480 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -6,7 +6,12 @@
 
 	* devel-docs/ggr.txt: added new file decribing the ggr 
 	(Gimp gradient) file format.
-	
+
+2004-08-25  DindinX  <david@dindinx.org>
+
+	* app/display/gimpnavigationeditor.[ch]: eradicate some more previews
+	in favor of views.
+
 2004-08-25  DindinX  <david@dindinx.org>
 
 	* app/display/gimpnavigationview.c
