--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-08-25  Sven Neumann  <sven@gimp.org>
+
+	* POTFILES.in: updated.
+
 2004-08-24  Roman Joost	<romanofski@gimp.org>
 
 	* de.po: updated and removed fuzzy strings
