--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-08-25  Bill Skaggs  <weskaggs@primate.ucdavis.edu>
+
+	* devel-docs/ggr.txt: fix incorrect statement, add note re SVG.
+
 2004-08-25  Sven Neumann  <sven@gimp.org>
 
 	* app/widgets/gimpmessagebox.[ch]: added gimp_message_box_repeat().
