--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2004-08-25  Sven Neumann  <sven@gimp.org>
+
+	* app/widgets/gimperrordialog.[ch] (gimp_error_dialog_add): stop
+	adding message boxes and redirect messages to stderr if there are
+	too many messages.
+
 2004-08-25  Bill Skaggs  <weskaggs@primate.ucdavis.edu>
 
 	* devel-docs/ggr.txt: fix incorrect statement, add note re SVG.
