--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-08-25  Manish Singh  <yosh@gimp.org>
+
+	* plug-ins/common/gifload.c: Guard against bogus logical screen
+	dimensions. Fixes bug #151053.
+
 2004-08-26  DindinX  <david@dindinx.org>
 
 	* app/widgets/gimppreview-popup.c
