--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2004-08-26  DindinX  <david@dindinx.org>
+
+	* app/widgets/gimppreview-popup.c
+	* app/widgets/gimppreview-popup.h
+	* app/widgets/gimppreviewrenderer.c
+	* app/widgets/gimppreviewrenderer.h: really removed these files from
+	cvs.
+
 2004-08-25  Manish Singh  <yosh@gimp.org>
 
 	* plug-ins/common/gifload.c: Guard against bogus logical screen
