2004-08-26  Sven Neumann  <sven@gimp.org>
	* de.po: minor update.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14490 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-08-26  Sven Neumann  <sven@gimp.org>
+
+	* de.po: minor update.
+
 2004-08-25  Sven Neumann  <sven@gimp.org>
 
 	* POTFILES.in: updated.
