2004-08-26  Sven Neumann  <sven@gimp.org>
	* app/tools/gimp-tools.c (gimp_tools_register): set the paintbrush
	as the default tool as suggested in bug #151091.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14491 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-08-26  Sven Neumann  <sven@gimp.org>
+
+	* app/tools/gimp-tools.c (gimp_tools_register): set the paintbrush
+	as the default tool as suggested in bug #151091.
+
 2004-08-26  DindinX  <david@dindinx.org>
 
 	* app/widgets/gimppreview-popup.c
